--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -17,7 +16,7 @@
         android:theme="@style/Theme.PDFy"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".startpage"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +25,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".CameraToPdfActivity" />
+        <activity android:name=".loginp"/>
+<!--        <activity android:name=".loginp" />-->
+        <activity android:name=".MainActivity" />
+        <activity android:name=".signupp" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.pd_fy.provider"
