--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PDFy"
         tools:targetApi="31">
-        <activity
-            android:name=".PdfGalleryActivity"
+        <activity android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,10 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".PdfGalleryActivity" />
         <activity android:name=".CameraToPdfActivity" />
         <activity android:name=".loginp"/>
-<!--        <activity android:name=".loginp" />-->
-        <activity android:name=".MainActivity" />
         <activity android:name=".signupp" />
         <activity android:name=".startpage" />
         <provider
@@ -39,13 +38,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
         </provider>
-        <activity android:name=".ImageProcessing"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".ImageProcessing" />
     </application>
 
 </manifest>
